[project]
name = "spar-autointerp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"torch>=2.8.0",
	"transformers>=4.56.2",
	"datasets>=4.1.1",
	"tqdm>=4.66.4",
	"dataclasses; python_version<'3.7'"
]
[tool.setuptools]
packages = ["sae_training"]
